src/objects/Contact_Service_Level_Criteria__c.object
<CustomObject>
    <description>Created by shridevi, as part of SIR 1329(2016.11): This object is to store the email addresses(patterns) and Contact service level data.</description>
    <fields>
        <fullName>Contact_Service_Level__c</fullName>
        <description>Created by Shridevi, as part of SIR 1329(2016.11): This field is used to store the Contact Service Level value.</description>
        <label>Contact Service Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria_Field_Name__c</fullName>
        <description>Created By Shridevi, as part of SIR 1329(2016.11) : This field is to store the field name of the contact, which is used for identifying the Contact Service Level.</description>
        <label>Criteria Field Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria_Field_Value__c</fullName>
        <description>Created by Shridevi, as part of SIR 1329(2016.11): This field is used for storing the value of the criteria field which we are using for identifying the Contact Service Level.</description>
        <label>Criteria Field Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Created by Shridevi, as part of SIR 1329(2016.11): This field is for string the description of each rule used for identifying Contact Service Level.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <label>Contact Service Level Criteria</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact_Service_Level__c</columns>
        <columns>Criteria_Field_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CSL-{00000}</displayFormat>
        <label>CSL Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Service Level Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>